# unifloat

./: Cargo.toml
src/: lib.rs  operands.rs
src/tests/: mod.rs  type_sizes.rs  unifloat_bounds.rs
tests/: f32_only.rs  f32_only_or_32arch.rs  type_sizes_all.rs
