[package]
name = "unifloat"
version = "0.1.0"
authors = ["Peter Kehl <peter.kehl@gmail.com>"]
edition = "2018"

keywords = ["api", "arithmetic", "const-generics", "cross-platform", "float", "floating-point",  "generic", "generics", "math", "mathematics", "maths", "number", "numerics", "optimization", "performance", "precision", "no-std", "no_std"]
# \--> serde? See if rug has serde.
categories = ["algorithms", "mathematics", "science", "api-bindings"]
exclude = [".gitignore"]

[features]
f32_only = []
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twofloat = "0.4.1"

[dependencies.gmp-mpfr-sys]
version = "~1.4" # We depend on MPFR internals. Hence, as per https://crates.io/crates/gmp-mpfr-sys, the version starts with tilde ~.
default-features = false
features = ["mpfr"]